[workspace]
resolver = "3"
members = [ "cfg-utils", "database", "game-server", "hi3-proto", "resource","sdk-server"]

[workspace.package]
# name = "hi-hi-hi"
version = "8.1.12"
edition = "2024"
authors = ["Yulian <yuvlian@naver.com>"]
license = "MIT"
description = "With this, it's curtain call for the Elysian Realm"
homepage = "https://git.neonteam.dev/yulian/hi-hi-hi"
repository = "https://git.neonteam.dev/yulian/hi-hi-hi"
readme = "README.md"

[workspace.dependencies]
axum = "0.8.1"
axum-server = "0.7.1"
bytes = "1.9.0"
prost = "0.13.4"
prost-build = "0.13.4"
prost-types = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite", "derive" ] }
rust-embed = "8.5.0"
itertools = "0.14.0"
rand = "0.8.5"
chrono = "0.4.39"
soft-aes = "0.2.2"
rbase64 = "2.0.3"
regex = "1.11.1"
heck = "0.5.0"
walkdir = "2.5.0"
paste = "1.0.15"
# local deps
cfg-utils = { path = "cfg-utils/" }
database = { path = "database/" }
hi3-proto = { path = "hi3-proto/" }
resource = { path = "resource/" }

[profile.release]
opt-level = 3
strip = true
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
strip = "none"
lto = "off"
panic = "abort"
incremental = true
# i need to save storage...
# this will cause longer compile but whatever.
codegen-units = 64

[profile.dev.build-override]
opt-level = 0
incremental = true
codegen-units = 64
