[workspace]
resolver = "3"
members = ["ultina-rs"]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Yulian <yuvlian@naver.com>"]
license = "Zlib"
repository = "https://github.com/yuvlian/ultina"

[workspace.dependencies]
axum = "0.8.1"
axum-server = "0.7.1"
mime = "0.3.17"
paste = "1.0.15"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
