[package]
name = "hi3-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
prost-build.workspace = true
regex.workspace = true
heck.workspace = true