[package]
name = "resource"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
itertools.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
