[package]
name = "sdk-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
axum-server.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
chrono.workspace = true
cfg-utils.workspace = true
common.workspace = true
tracing.workspace = true
