[package]
name = "ultina-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
axum-server.workspace = true
mime.workspace = true
paste.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
xxhash-rust.workspace = true
